k8s/daatabase.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres
    namespace: nodejs-app
    labels:
        app: postgres
spec:
    replicas: 1
    selector:
        matchLabels:
            app: postgres
    template:
        metadata:
            labels:
                app: postgres
        spec:
            containers:
                - name: postgres
                  image: postgres:13
                  ports:
                      - containerPort: 5432
                  volumeMounts:
                      - name: postgres-storage
                        mountPath: /var/lib/postgresql/data
            volumes:
                - name: postgres-storage
                  persistentVolumeClaim:
                      claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
    name: postgres-service
    namespace: nodejs-app
    labels:
        app: postgres
spec:
    selector:
        app: postgres
    ports:
        - name: postgres
          port: 5432
          targetPort: 5432
    type: ClusterIP
