k8s/order-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: order-service
spec:
    selector:
        app: order-service
    ports:
        - protocol: TCP
          port: 3002
          targetPort: 3002
    type: ClusterIP
