k8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: product-service
spec:
    selector:
        app: product-service
    ports:
        - protocol: TCP
          port: 3001
          targetPort: 3001
    type: ClusterIP
