k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: retail-ingress
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    rules:
        - host: retail.yourdomain.com # CHANGE THIS
          # - host: retail.example.com
          http:
              paths:
                  - path: /products
                    pathType: Prefix
                    backend:
                        service:
                            name: product-service
                            port:
                                number: 3001
                  - path: /orders
                    pathType: Prefix
                    backend:
                        service:
                            name: order-service
                            port:
                                number: 3002
